[tool.poetry]
name = "dataconnectorconfig"
version = "0.1.0"
description = "DataConnectorConfigs: Data-Connector configs for dataprep"
authors = [
    "Jiannan Wang <jnwang@sfu.ca>", 
    "Weiyuan Wu <youngw@sfu.com>", 
    "Jinglin Peng <jinglin_peng@sfu.ca>",
    "Pei Wang <peiw@sfu.ca>",
    "Brandon Lockhart <brandon_lockhart@sfu.ca>",
    "Song Bian <biansonghz@gmail.com>"
]

license = "MIT"

readme = "README.md"  # Markdown files are supported

repository = "https://github.com/sfu-db/DataConnectorConfigs"
homepage = "https://github.com/sfu-db/DataConnectorConfigs"

keywords = ["dataprep", "eda", "data connector", "data science", "exploratory data analysis", "data exploration"]

[tool.poetry.dependencies]
python = "^3.6"

# Dependencies for DataConnector
jsonschema = "~3.1"
requests = "~2.22"
jinja2 = "~2.10"
jsonpath2 = "~0.4"
lxml = "~4.4"

[tool.poetry.dev-dependencies]
pylint = "~2.4"
pytype = "~2019.8"
pytest = "~5.1"
mypy = "~0.740"
black = "19.10b0"
sphinx = "~2.2"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37']
exclude = '''
(
    /(
        \.eggs
    | \.git
    | \.pytype
    | \.pytest_cache
    | build
    | dist
    )/
)
'''
